// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withMods class components (snapshot) 1`] = `
<div
  className="class-from-mods class-from-props"
  role="note"
>
  test!
</div>
`;

exports[`withMods functional component (snapshot) 1`] = `
<div
  className="class-from-mods class-from-props"
  role="note"
>
  from mod
</div>
`;
